<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/input_label_hint"
        app:errorTextAppearance="@style/input_layout_error"
        app:boxStrokeWidth="0dp"
        app:counterMaxLength="30"
        app:counterEnabled="true"
        android:id="@+id/til_name">

        <com.fscsoftware.managetasks.ui.custom_views.EditTextMultiLine
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:maxLength="30"
            android:hint="@string/priority_name"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>