<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1"
    android:background="@drawable/tag_style_shape"
    >

    <TextView
        android:id="@+id/tv_name"
        android:padding="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:clickable="false"
        android:longClickable="true"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?colorOnPrimary"
        style="@style/title_item_task"
        tools:text=" Shorttext " />

    <ImageView
        android:id="@+id/iv_priority_item"
        android:layout_weight="0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/move"
        android:clickable="true"
        android:contextClickable="true"
        android:padding="5dp"
        android:background="@drawable/tag_btn_style_shape"
        app:srcCompat="@drawable/ic_edit"
        app:tint="?colorOnPrimary" />

</LinearLayout>