...
    <string name="title_home">Tasks</string>
    <string name="title_finish">Finish Task</string>
    <string name="title_settings">Settings</string>
    <!-- OPTIONS -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- Buttons -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="go">Go</string>
...
