...

              IF IT IS CHANGE BY CUSTOM LAYOUT MANAGER AS
              "ui/custom_views/FlowAutoSizeLayout" perhaps be better change code into
              touch helper "helpers/SwipeHelperPriority", change on onMoved method
            -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_priorities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="40dp"
...
