...
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:contentDescription="@string/add"
...
